--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@eslint/eslintrc": "^3.1.0",
     "@types/gulp": "^4.0.17",
     "@types/gulp-autoprefixer": "^0.0.37",
-    "@types/gulp-less": "^0.0.36",
+    "@types/gulp-sass": "^5.0.4",
     "@types/node": "^20.14.9",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
@@ -29,10 +29,10 @@
     "eslint-plugin-vue": "^9.28.0",
     "gulp": "^5.0.0",
     "gulp-autoprefixer": "^8.0.0",
-    "gulp-less": "^5.0.0",
+    "gulp-sass": "^5.1.0",
     "happy-dom": "^15.7.4",
-    "less": "^4.2.0",
     "prettier": "^3.3.3",
+    "sass": "^1.81.0",
     "sucrase": "^3.35.0",
     "typescript": "^5.4.5",
     "unplugin-vue-define-options": "^1.4.5",
